# ia-concepts

./: .gitignore  LICENSE  README.md  REORGANIZATION_SUMMARY.md  pyproject.toml
datasets/: README.md
docs/: README.md
docs/algorithms/evolutionary/: README.md  differential_evolution.md  evolution_strategies.md  gene_expression_programming.md  genetic_programming.md
docs/algorithms/greedy/: README.md  activity_selection.md  dijkstra.md  hill_climbing.md  huffman.md  kruskal.md  prim.md
docs/algorithms/metaheuristics/: simulated_annealing.md  simulated_anneling.md  tabu_search.md
docs/algorithms/optimization/: README.md  cross_entropy_method.md
docs/statistics/: README.md
notebooks/: README.md
notebooks/algorithms/: ant_colony_optimization.ipynb  busca_largura_bfs.ipynb  busca_profundidade_dfs.ipynb  clustering_k_means.ipynb  exemplo_bfs.ipynb
notebooks/data_science/: antibody_binding.ipynb
notebooks/statistics/: README.md  medidas_de_dispersao.ipynb
output/: output_.json
scripts/: README.md
src/: cli.py  main.py  main_python.py
src/algorithms/single/: tabusearch.py  (+2 more)
src/notebook/: AC_game_life.ipynb  Aula_Ajuste_de_Curva.ipynb  Aula_de_Pandas_DS.ipynb  Buscas_Informadas.ipynb  DE.ipynb  Disciplina_de_métodos_numéricos_MMQ (1).ipynb  Exemplo_AG.ipynb  Exemplo_Operador_transição_AG.ipynb  Introdução_à_matplotlib.ipynb  Mineração de Dados - Análise de Sentimentos.ipynb  Métodos_Numéricos_Sistemas_lineares.ipynb  PSO.ipynb  Probabilidade_básica.ipynb  Scipy.ipynb
src/services/: pegar_coordenada.py
src/utils/: calc_distance.py  save_df_to_json.py
(+34 files in other folders)
