[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Luis Santos <luissantos@uni9.pro.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
polar = "^0.0.127"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
fastapi = "^0.115.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
